--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,25 @@
     <artifactId>scientific_calculator</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/junit/junit -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+
+
+
+
+    </dependencies>
+    <!-- https://mvnrepository.com/artifact/junit/junit -->
+
+
+
+
+
+
 
 </project>
