--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,10 @@
     <groupId>com.zipcodewilmington</groupId>
     <artifactId>scientific_calculator</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+</properties>
     <dependencies>
         <!-- https://mvnrepository.com/artifact/junit/junit -->
         <dependency>
@@ -16,6 +19,7 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+
 
 
 
